# project-artemis

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  run.py
config/: default.toml  local.toml.example
reports/: artemis_report_20260219_142813.html  artemis_report_20260219_150720.html  artemis_report_20260219_150926.html  artemis_report_20260219_153618.html  artemis_report_20260219_154821.html  artemis_shield_report_20260219_155627.html
src/artemis/: __init__.py  cli.py
src/artemis/ai/: __init__.py  alert_narrator.py  chat.py  investigator.py  provider.py
src/artemis/core/: __init__.py  admin.py  auth.py  config.py  database.py  events.py  persistence.py  remediation.py  threat_classifier.py
src/artemis/correlation/: __init__.py  engine.py
src/artemis/edr/: __init__.py  plugin_base.py
src/artemis/edr/plugins/: __init__.py  file_integrity.py  process_monitor.py  sysmon.py
src/artemis/generators/: __init__.py  base.py
src/artemis/network/: __init__.py  scanner.py
src/artemis/pentest/: __init__.py
src/artemis/redteam/: __init__.py  simulator.py
src/artemis/reporting/: generator.py
src/artemis/scanner/: __init__.py  base.py  config_audit.py  plugins.py
src/artemis/web/: __init__.py  app.py  pages.py  sse.py  websocket.py
src/artemis/web/api/: routes.py
src/artemis/web/templates/: alerts.html  base.html  chat.html  home.html  (+11 more)
tests/: check_home.py  check_hunt.py  check_status.py  final_check.py  final_v2.py  full_audit.py  full_check.py  live_check.py  test_new_features.py  test_p1.py  test_p2.py  test_p3.py  test_p4.py  test_redteam.py
(+1 files in other folders)
